# claude-agent-kit

./: .gitignore  AGENTS.md  Cargo.toml  test.json
agent-sdk/: CHANGELOG.md  Cargo.toml
agent-sdk/src/: client.rs  lib.rs
agent-sdk/src/internal/: client.rs  message_parser.rs  mod.rs  query.rs
agent-sdk/src/internal/session/: mod.rs
agent-sdk/src/internal/transport/: base.rs  mod.rs  process_handle.rs  read_half.rs  stderr_half.rs  subprocess.rs  write_half.rs
agent-sdk/src/types/: agent.rs  control.rs  error.rs  hooks.rs  mcp.rs  messages.rs  mod.rs  permissions.rs  sandbox.rs
agent-sdk/tests/: split_integration_test.rs
websocket/: APPROVAL_TESTING.md  Cargo.toml  README.md  UNIFIED-EVENTS-QUICKSTART.md  package-lock.json  test-session-id.js  test-unified-events.js  test-user-session-init.js  test-verify-session-id.js
websocket/docs/plans/: 2025-01-31-query-based-refactor.md
websocket/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
websocket/frontend/src/: App.css  App.tsx  index.css  types.ts
websocket/frontend/src/components/: theme-provider.tsx  theme-toggle.tsx
websocket/frontend/src/components/chat/: chat-interface.tsx  connection-status.tsx  message-input.tsx  (+3 more)
websocket/frontend/src/hooks/: useWebSocket.ts
websocket/src/: connection.rs  error.rs  handler.rs  lib.rs  main.rs  message.rs  server.rs
websocket/src/agent/: client.rs  mod.rs  pool.rs  session.rs  session_manager.rs
websocket/src/protocol/: common.rs  converter.rs  event_converter.rs  events.rs  mod.rs  sdk_converter.rs  types.rs
websocket/src/session/: handler.rs  mod.rs  state.rs
websocket/src/session/query/: error.rs  mod.rs  session.rs
websocket/static/: index.html
websocket/tests/: integration_test.rs
(+26 files in other folders)
