[package]
name = "claude-agent-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
futures = "0.3"
which = "6.0"
async-stream = "0.3"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
